test/compile_errors/err_target_unknown_arch.w
//! expect-error: unknown target architecture

@[target("sparc")]
fn f() -> i32:
    1

fn main:
    print("x")
